ios deploy target

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,9 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '12.4'
+deployment_target = Gem::Version.new('12.4')
+
+platform :ios, deployment_target
 install! 'cocoapods', :deterministic_uuids => false
 
 target 'RnTodoAuth' do
@@ -39,5 +41,24 @@ target 'RnTodoAuth' do
       :mac_catalyst_enabled => false
     )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    
+    # https://stackoverflow.com/questions/72846698/react-native-ios-0-69-1-build-failed-when-creating-new-project
+    # target -> https://www.rubydoc.info/gems/xcodeproj/Xcodeproj/Project/Object/PBXNativeTarget
+    installer.pods_project.targets.each do |target|
+      case target.name
+      # Ignore RCT-Folly because it only works with 9.0 as a deployment target
+      when 'RCT-Folly'
+        next
+      else
+        # Explicitly set pods deployment target for each build config to app deployment target
+        target.build_configurations.each do |config|
+          current_pod_target = config.build_settings['IPHONEOS_DEPLOYMENT_TARGET']
+          pod_ios_deployment_target = Gem::Version.new(current_pod_target)
+          if pod_ios_deployment_target <= deployment_target
+            config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
+          end
+        end
+      end
+    end
   end
 end
