--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,8 @@ deployment_target = Gem::Version.new('12.4')
 platform :ios, deployment_target
 install! 'cocoapods', :deterministic_uuids => false
 
+production = ENV["PRODUCTION"] == "1"
+
 target 'RnTodoAuth' do
   config = use_native_modules!
 
@@ -14,15 +16,10 @@ target 'RnTodoAuth' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    # Hermes is now enabled by default. Disable by setting this flag to false.
-    # Upcoming versions of React Native may rely on get_default_flags(), but
-    # we make it explicit here to aid in the React Native upgrade process.
-    :hermes_enabled => true,
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    :production => production,
+    :hermes_enabled => flags[:hermes_enabled],
     :fabric_enabled => flags[:fabric_enabled],
-    # Enables Flipper.
-    #
-    # Note that if you have use_frameworks! enabled, Flipper will not work and
-    # you should disable the next line.
     :flipper_configuration => FlipperConfiguration.enabled,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
@@ -34,12 +31,7 @@ target 'RnTodoAuth' do
   end
 
   post_install do |installer|
-    react_native_post_install(
-      installer,
-      # Set `mac_catalyst_enabled` to `true` in order to apply patches
-      # necessary for Mac Catalyst builds
-      :mac_catalyst_enabled => false
-    )
+    react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
     
     # https://stackoverflow.com/questions/72846698/react-native-ios-0-69-1-build-failed-when-creating-new-project
