--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "expo": "^46.0.0",
+    "expo-constants": "~13.2.4",
+    "expo-local-authentication": "~12.3.0",
     "react": "18.0.0",
     "react-native": "0.69.5"
   },
