--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/react-native": "10.1.1",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.70.0",
@@ -42,6 +43,9 @@
       "jsx",
       "json",
       "node"
+    ],
+    "setupFiles": [
+      "./src/test/jest-mock.js"
     ]
   }
 }
