--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "expo": "^46.0.0",
     "expo-constants": "~13.2.4",
     "expo-local-authentication": "~12.3.0",
+    "expo-secure-store": "~11.3.0",
+    "jest-expo": "^46.0.1",
     "react": "18.0.0",
     "react-native": "0.69.5"
   },
@@ -35,7 +37,7 @@
     "typescript": "^4.8.3"
   },
   "jest": {
-    "preset": "react-native",
+    "preset": "jest-expo",
     "moduleFileExtensions": [
       "ts",
       "tsx",
